<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jmgphotouploader</string>
    <string name="action_settings">settings</string>
    <string name="action_search">search</string>
    <string name="btn_add">add</string>
    <string name="action_resetdatabase">reset database</string>
    <string name="LoginLive">Login Live</string>
    <string name="btnClose">Close</string>
    <string name="action_refresh">refresh</string>
    <string name="search">search</string>
    <string name="onActivityResultcalled">result</string>
    <string name="Couldnotload">"Could not load "</string>
    <string name="Error">"Error: "</string>
    <string name="Notsignedin">Not signed in!</string>
    <string name="Errorsigningin">\"Error signing in: \"</string>
    <string name="Download">Download</string>
    <string name="DownloadingImage">Downloading image</string>
    <string name="Signedin">Signed in.</string>
    <string name="NotsignedinStatusis">"Not signed in. Status is "</string>
    <string name="Item">Item</string>
    <string name="isnomorevisible">" is no more visible!"</string>
    <string name="Operationcanceled">Operation canceled!</string>
    <string name="File">File</string>
    <string name="downloaded">" downloaded."</string>
    <string name="packagename">package name</string>
    <string name="CallingDriveApi">\"Calling Drive API ...\"</string>
    <string name="NoResultsReturned">\"No results returned.\"</string>
    <string name="DataReturned">\"Data retrieved using the Drive API:\"</string>
    <string name="AccessAccount">\"This app needs to access your Google account (via Contacts).\"</string>
    <string name="PlayServicesRequired">\"This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.\"</string>
    <string name="MaxLogin">Maximum number of login attempts reached!</string>
    <string name="NoNetwork">\"No network connection available.\"</string>
    <string name="send_to">send to</string>
    <string name="gettingData">getting data ....</string>
    <string name="photos">photos</string>
    <string name="selectImage">select image</string>
    <string name="OK">OK</string>
    <string name="RequestCancelled">Request cancelled</string>
    <string name="AccountNotFound">Account not found!</string>
    <string name="Message">Message</string>
    <string name="Local">Local</string>
    <string name="action_sortorder">reverse sort order</string>
    <string name="action_resetLive">reset live account</string>
    <string name="action_resetGoogle">reset google account</string>
    <string name="action_resetDropbox">reset dropbox account</string>
    <string name="action_showPrivacyPolicy">privacy policy</string>
    <string name="license">I accept the following license</string>
    <string name="PrivacyPolicy">I accept the privacy policy</string>
    <string name="question">question</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

</resources>
