<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.de.jmg.jmgphotouploader._MainActivity" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_refresh"
          android:icon="@android:drawable/ic_menu_revert"
          android:title="@string/action_refresh"
          app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_sortorder"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:title="@string/action_sortorder"
        app:showAsAction="ifRoom"/>
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          app:showAsAction="never"/>
    <item android:id="@+id/action_resetdatabase"
          android:title="@string/action_resetdatabase"
          app:showAsAction="never"/>
    <item
        android:id="@+id/action_resetLive"
        android:title="@string/action_resetLive"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_resetGoogle"
        android:title="@string/action_resetGoogle"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_resetDropbox"
        android:title="@string/action_resetDropbox"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_showPrivacyPolicy"
        android:title="@string/action_showPrivacyPolicy"
        app:showAsAction="never"/>

</menu>
